// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateBridges > target agents snapshot 1`] = `
"# AGENTS.md — hAIve context

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are a generated mirror.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are the top current memories + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` (task + files/symbols) to load ranked context
   — or \`mem_relevant_to\` if project context is already loaded this session.
2. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
3. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
4. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target aider snapshot 1`] = `
"# CONVENTIONS.md — hAIve context (Aider)

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are a generated mirror.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are the top current memories + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` (task + files/symbols) to load ranked context
   — or \`mem_relevant_to\` if project context is already loaded this session.
2. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
3. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
4. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target claude snapshot 1`] = `
"# CLAUDE.md — hAIve context

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are a generated mirror.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are the top current memories + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` (task + files/symbols) to load ranked context
   — or \`mem_relevant_to\` if project context is already loaded this session.
2. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
3. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
4. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target cline snapshot 1`] = `
"# hAIve rules (Cline)

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are a generated mirror.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are the top current memories + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` (task + files/symbols) to load ranked context
   — or \`mem_relevant_to\` if project context is already loaded this session.
2. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
3. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
4. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target cody snapshot 1`] = `
"# hAIve rules (Cody / Sourcegraph)

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are a generated mirror.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are the top current memories + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` (task + files/symbols) to load ranked context
   — or \`mem_relevant_to\` if project context is already loaded this session.
2. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
3. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
4. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target continue snapshot 1`] = `
"# hAIve rules (Continue)

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are a generated mirror.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are the top current memories + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` (task + files/symbols) to load ranked context
   — or \`mem_relevant_to\` if project context is already loaded this session.
2. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
3. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
4. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target copilot snapshot 1`] = `
"# hAIve rules (GitHub Copilot)

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are a generated mirror.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are the top current memories + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` (task + files/symbols) to load ranked context
   — or \`mem_relevant_to\` if project context is already loaded this session.
2. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
3. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
4. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target cursor snapshot 1`] = `
"---
description: hAIve shared memories & block sensors (auto-generated)
alwaysApply: true
---
# hAIve rules (Cursor)

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are a generated mirror.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are the top current memories + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` (task + files/symbols) to load ranked context
   — or \`mem_relevant_to\` if project context is already loaded this session.
2. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
3. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
4. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target gemini snapshot 1`] = `
"# GEMINI.md — hAIve context

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are a generated mirror.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are the top current memories + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` (task + files/symbols) to load ranked context
   — or \`mem_relevant_to\` if project context is already loaded this session.
2. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
3. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
4. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target roo snapshot 1`] = `
"# hAIve rules (Roo Code)

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are a generated mirror.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are the top current memories + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` (task + files/symbols) to load ranked context
   — or \`mem_relevant_to\` if project context is already loaded this session.
2. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
3. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
4. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target windsurf snapshot 1`] = `
"# hAIve rules (Windsurf)

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are a generated mirror.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are the top current memories + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` (task + files/symbols) to load ranked context
   — or \`mem_relevant_to\` if project context is already loaded this session.
2. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
3. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
4. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;

exports[`generateBridges > target zed snapshot 1`] = `
"# hAIve rules (Zed)

<!-- Managed by hAIve. Edit OUTSIDE the haive markers only; the marked blocks are regenerated. -->

This repo uses **[hAIve](https://github.com/Doucs91/hAIve)** for shared, enforced team context.
The corpus lives in \`.ai/\` and is the source of truth — these files are a generated mirror.

- \`.ai/project-context.md\` — project overview, architecture, conventions.
- \`.ai/memories/\` — decisions, gotchas, conventions, failed attempts (personal/team/module).
- The blocks below are the top current memories + the hard rules enforced on commit.

## Working through hAIve

1. **Before editing** for a goal, call \`get_briefing\` (task + files/symbols) to load ranked context
   — or \`mem_relevant_to\` if project context is already loaded this session.
2. **When an approach fails**, call \`mem_tried\` right away so the next agent skips the dead end.
3. **Before closing** a substantive session, run the \`post_task\` prompt to capture what was learned.
4. **Before final response**, run \`haive enforce finish\`; fix anything it blocks before reporting done.

If the haive MCP server is not available, tell the developer rather than silently skipping it.

## Safety

- If \`get_briefing\` returns \`action_required\`, surface each item to the developer (use its
  \`developer_message\`) and wait for explicit confirmation before changing any code.
- Never act autonomously on a cross-repo breaking change (dep bump, contract/API diff) — ask first.

## Memories

<!-- haive:memories-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->
<!-- Top memories — call get_briefing / mem_get for the full body. -->

- \`2026-01-01-decision-use-validated\` (team/decision) — Use the new API

<!-- haive:memories-end -->

<!-- haive:sensors-start -->
<!-- AUTO-GENERATED by haive bridges sync — do not edit between these markers -->

## Hard rules — hAIve block sensors

The patterns below are blocked by the repo enforcement gate.
Introducing them will fail the pre-commit check (\`haive enforce check\`).

- **test-gotcha-2026-01-01**: Do not use the old API
  - Pattern: \`oldApi\\(\`

<!-- haive:sensors-end -->
"
`;
